# live-photo-tool

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker-publish.yml
backend/: app.py  config.py  pyproject.toml
backend/luts/: LogC_to_Rec709.cube  SLog2_to_S709.cube  SLog3_to_S709.cube  VLog_to_V709.cube  VLog_to_V709_Cool.cube  VLog_to_V709_Warm.cube
backend/modules/: __init__.py  ffmpeg_utils.py  live_photo.py  lut_manager.py  session_manager.py
docs/: 01-product-requirements.md  02-technical-architecture.md  03-api-spec.md  04-docker-deployment.md  README.md
frontend/: app.js  index.html  style.css
